# k3s

./: .gitignore  01-install-master.sh  02-add-worker.sh  03-add-master-ha.sh  04-node-labels.sh  05-setup-nvidia-gpu.sh  06-install-rancher.sh  07-install-dashboard.sh  99-uninstall.sh  BUILD_AND_DEPLOY_GUIDE.md  DEPLOYMENT_SUMMARY.md  Makefile  QUICK_REFERENCE.md  README.md  build-and-deploy.sh  containerd-config.toml.tmpl  dashboard-access.txt  dashboard-deployment.yaml  dashboard-rbac.yaml  deploy-dashboard.sh  deploy-with-sudo.sh  docker-compose.dev.yml  join-server.sh  monitor-deployment.sh  rancher-access.txt  setup-gpu-runtime.sh  workload.sh
dashboard/backend/: .dockerignore  .env.development  Dockerfile.dev  main.py  main_legacy.py  pyproject.toml  requirements-test.txt  requirements.txt
dashboard/backend/core/: __init__.py  config.py  kubernetes.py
dashboard/backend/models/: __init__.py  baremetal.py  benchmark.py  cluster.py  embedding.py  langgraph.py  ontology.py  pod.py  schemas.py  storage.py  workflow.py
dashboard/backend/routers/: __init__.py  benchmark.py  cluster.py  comfyui.py  embedding.py  gpu.py  langgraph.py  ontology.py  parser.py  pipeline.py  pods.py  qdrant.py  storage.py  vllm.py  workflow.py
dashboard/backend/routers/ai/: __init__.py  embedding.py
dashboard/backend/routers/baremetal/: __init__.py  (+2 more)
dashboard/backend/services/: __init__.py  embedding.py  minio.py  pod.py
dashboard/backend/tests/: conftest.py  test_routers.py
dashboard/backend/utils/: __init__.py  config.py  helpers.py  k8s.py  k8s_client.py  resources.py
(+182 files in other folders)
